# vexen-rbac

./: .env.example  API_EXAMPLES.md  INTEGRATION_GUIDE.md  LICENSE  README.md  USAGE.md  examples_list_all.py  main.py  pyproject.toml  pyproject.toml.example
.github/: PUBLISHING.md
.github/workflows/: python-publish.yml
rbac/: __init__.py  adapters.py  core.py
rbac/application/dto/: __init__.py  permission_dto.py  role_dto.py
rbac/application/service/: rbac_service.py
rbac/application/usecase/permission/: __init__.py  create_permission.py  delete_permission.py  factory.py  get_permission.py  get_permissions_grouped.py  list_permissions.py  update_permission.py
rbac/application/usecase/permission_group/: __init__.py  add_permissions_to_group.py  count_group_permissions.py  create_permission_group.py  delete_permission_group.py  factory.py  get_permission_group.py  (+3 more)
rbac/domain/entity/: __init__.py  permission.py  permission_group.py  role.py
rbac/domain/ports/: permission_group_repository_port.py  permission_repository_port.py  role_repository_port.py
vexen_rbac/: __init__.py  core.py
vexen_rbac/application/dto/: __init__.py  base.py  pagination.py  permission_group_dto.py  role_dto.py
vexen_rbac/application/service/: rbac_service.py
vexen_rbac/application/usecase/: __init__.py
vexen_rbac/domain/entity/: permission.py  role.py
vexen_rbac/domain/ports/: __init__.py  permission_group_repository_port.py  permission_repository_port.py  role_repository_port.py
vexen_rbac/shared/: __init__.py
vexen_rbac/shared/models/: __init__.py
(+82 files in other folders)
