[project]
name = "rbac"
version = "0.1.0"
description = "Role-Based Access Control library with hexagonal architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"orjson>=3.11.4",
	"asyncpg>=0.29.0",
	"greenlet>=3.0.0",
	"sqlalchemy[asyncio]>=2.0.44",
]

[dependency-groups]
dev = ["pytest>=9.0.1", "ruff>=0.14.7"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
indent-style = "tab"
quote-style = "double"
line-ending = "auto"

[tool.ruff.lint]
select = [
	"E",  # pycodestyle errors
	"W",  # pycodestyle warnings
	"F",  # pyflakes
	"I",  # isort
	"N",  # pep8-naming
	"UP", # pyupgrade
	"B",  # flake8-bugbear
	"C4", # flake8-comprehensions
]
ignore = ["W191"]
